--- a/html/statbrowser.html
+++ b/html/statbrowser.html
@@ -399,11 +399,11 @@ function byond_update(cdata, ddata) {
 	redraw_content();
 }
 
-
+/// pushes data
 function _push_data(data) {
 	var parsed = JSON.parse(data);
 	for(var i = 0; i < parsed.length; i++){
-		if(parsed[i] == null){
+		if(parsed[i] != null){
 			data.push(parsed[i]);
 		}
 	}
@@ -467,10 +467,10 @@ function __byond_add_verbs(data, force_draw) {
 			var a_up = a.toUpperCase();
 			var b_up = b.toUpperCase();
 			if(a_up < b_up) {
-				return 1;
+				return -1;
 			}
 			if(a_up > b_up) {
-				return -1;
+				return 1;
 			}
 			return 0;
 		})
@@ -736,14 +736,15 @@ function erase_tab(name) {
 /// clear tabs that don't have verbs
 function erase_tabs() {
 	stat_tabs = [];
+	transmit_verb(".statpanel_tab_wipe");
 	for(var i = all_tabs.length - 1; i >= 0; --i){
 		var tab = all_tabs[i];
 		if(tab in verbs){
+			transmit_verb(".statpanel_tab_add " + tab)
 			continue;
 		}
 		all_tabs.splice(i, 1);
 	}
-	transmit_verb(".statpanel_tab_wipe");
 	redraw_menu();
 }
 
