--- a/html/statbrowser.html
+++ b/html/statbrowser.html
@@ -787,20 +787,23 @@ function tab_order(tab) {
 	if(tab == "Status") {
 		return 1;
 	}
-	else if(tab == "Examine") {
+	else if(tab == "Turf") {
 		return 2;
 	}
-	else if(tab == "MC") {
-		return 4;
-	}
-	else if(tab == "Turf") {
+	else if(tab == "Examine") {
 		return 3;
 	}
-	else if(tab == "Tickets") {
+	else if(tab == "Species") {
+		return 4;
+	}
+	else if(tab == "MC") {
 		return 5;
 	}
+	else if(tab == "Tickets") {
+		return 6;
+	}
 	else {
-		return tab.charCodeAt(0) + 3;
+		return tab.charCodeAt(0) + 6;
 	}
 }
 
