recolours text background

--- a/html/statbrowser.html
+++ b/html/statbrowser.html
@@ -240,7 +240,7 @@ function set_style_sheet(sheet) {
 	.grid-item-text {
 		display: inline-block;
 		width: 100%;
-		background-color: #ffffff;
+		background-color: #dfdfdf;
 		margin: 0 -6px;
 		padding: 0 6px;
 		white-space: nowrap;
@@ -250,7 +250,7 @@ function set_style_sheet(sheet) {
 	}
 
 	.dark .grid-item-text {
-		background-color: #131313;
+		background-color: #222222;
 	}
 
 	.link {
